# daily_planner

./: .env  Cargo.toml  README.md
src/: lib.rs  main.rs  quote.rs
