[package]
name = "daily_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
env_logger = "0.9"
chrono = "0.4"

reqwest = { version = "0.11", features = ["blocking", "json"] }

serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
